--- a/public/app/views/user.html
+++ b/public/app/views/user.html
@@ -1,1 +1,6 @@
-<div>Hello</div>
+<div>
+  <input type="text" ng-model="user.username"/>
+  <input type="text" ng-model="user.email"/>
+  <input type="password" ng-model="user.password"/>
+  <a href="#/users" ng-click="send()">Save</a>
+</div>
